MT/ParserGenerator/src/kotlin/ru/ifmo/antlr/InputGrammarParserParser.java
// Generated from /Users/nikita/Algo-DM-laba/MT/ParserGenerator/src/resources/realAntlr/InputGrammarParser.g4 by ANTLR 4.7.2
package ru.ifmo.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import ru.ifmo.antll1.Grammar;
import ru.ifmo.antll1.Rule;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InputGrammarParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAMMAR=1, HEADERS=2, RULES=3, START=4, TOKENS=5, IGNORE=6, IMPORT=7, 
		RETURNS=8, SEMICOLON=9, OPEN_CLOSURE=10, CLOSE_CLOSURE=11, OPEN_BRACKET=12, 
		CLOSE_BRACKET=13, EQLUALLY=14, COMMA=15, COLON=16, OR=17, WORD=18, CODE=19, 
		REGEXP=20, WS=21;
	public static final int
		RULE_grammarFile = 0, RULE_grammarName = 1, RULE_headers = 2, RULE_startRule = 3, 
		RULE_rulesQ = 4, RULE_ruleQ = 5, RULE_parameters = 6, RULE_returnValue = 7, 
		RULE_condition = 8, RULE_step = 9, RULE_tokensss = 10, RULE_ignoreTokens = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarFile", "grammarName", "headers", "startRule", "rulesQ", "ruleQ", 
			"parameters", "returnValue", "condition", "step", "tokensss", "ignoreTokens"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "'headers'", "'rules'", "'start'", "'tokens'", "'ignore'", 
			"'import'", "'returns'", "';'", "'{'", "'}'", "'('", "')'", "'='", "','", 
			"':'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GRAMMAR", "HEADERS", "RULES", "START", "TOKENS", "IGNORE", "IMPORT", 
			"RETURNS", "SEMICOLON", "OPEN_CLOSURE", "CLOSE_CLOSURE", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "EQLUALLY", "COMMA", "COLON", "OR", "WORD", "CODE", 
			"REGEXP", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InputGrammarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InputGrammarParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarFileContext extends ParserRuleContext {
		public Grammar grammar;
		public GrammarNameContext gn;
		public HeadersContext h;
		public StartRuleContext sr;
		public RulesQContext r;
		public TokensssContext t;
		public IgnoreTokensContext ig;
		public GrammarNameContext grammarName() {
			return getRuleContext(GrammarNameContext.class,0);
		}
		public HeadersContext headers() {
			return getRuleContext(HeadersContext.class,0);
		}
		public StartRuleContext startRule() {
			return getRuleContext(StartRuleContext.class,0);
		}
		public RulesQContext rulesQ() {
			return getRuleContext(RulesQContext.class,0);
		}
		public TokensssContext tokensss() {
			return getRuleContext(TokensssContext.class,0);
		}
		public IgnoreTokensContext ignoreTokens() {
			return getRuleContext(IgnoreTokensContext.class,0);
		}
		public GrammarFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarFile; }
	}

	public final GrammarFileContext grammarFile() throws RecognitionException {
		GrammarFileContext _localctx = new GrammarFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((GrammarFileContext)_localctx).gn = grammarName();
			setState(25);
			((GrammarFileContext)_localctx).h = headers();
			setState(26);
			((GrammarFileContext)_localctx).sr = startRule();
			setState(27);
			((GrammarFileContext)_localctx).r = rulesQ();
			setState(28);
			((GrammarFileContext)_localctx).t = tokensss();
			setState(29);
			((GrammarFileContext)_localctx).ig = ignoreTokens();

			      ((GrammarFileContext)_localctx).grammar =  new Grammar();
			      _localctx.grammar.grammarName = ((GrammarFileContext)_localctx).gn.name;
			      _localctx.grammar.headers.add(((GrammarFileContext)_localctx).h.list);
			      _localctx.grammar.startRule = ((GrammarFileContext)_localctx).sr.name;
			      _localctx.grammar.rules.add(((GrammarFileContext)_localctx).r.list);
			      _localctx.grammar.tokens.add(((GrammarFileContext)_localctx).t.list);
			      _localctx.grammar.ignore.add(((GrammarFileContext)_localctx).ig.list);
			       
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarNameContext extends ParserRuleContext {
		public String name;
		public Token w2;
		public TerminalNode GRAMMAR() { return getToken(InputGrammarParserParser.GRAMMAR, 0); }
		public TerminalNode SEMICOLON() { return getToken(InputGrammarParserParser.SEMICOLON, 0); }
		public TerminalNode WORD() { return getToken(InputGrammarParserParser.WORD, 0); }
		public GrammarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarName; }
	}

	public final GrammarNameContext grammarName() throws RecognitionException {
		GrammarNameContext _localctx = new GrammarNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(GRAMMAR);
			setState(33);
			((GrammarNameContext)_localctx).w2 = match(WORD);
			 ((GrammarNameContext)_localctx).name =  ((GrammarNameContext)_localctx).w2; 
			setState(35);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadersContext extends ParserRuleContext {
		public ArrayList<String> list;
		public Token importW;
		public TerminalNode HEADERS() { return getToken(InputGrammarParserParser.HEADERS, 0); }
		public TerminalNode OPEN_CLOSURE() { return getToken(InputGrammarParserParser.OPEN_CLOSURE, 0); }
		public TerminalNode CLOSE_CLOSURE() { return getToken(InputGrammarParserParser.CLOSE_CLOSURE, 0); }
		public List<TerminalNode> IMPORT() { return getTokens(InputGrammarParserParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(InputGrammarParserParser.IMPORT, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(InputGrammarParserParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(InputGrammarParserParser.SEMICOLON, i);
		}
		public List<TerminalNode> WORD() { return getTokens(InputGrammarParserParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(InputGrammarParserParser.WORD, i);
		}
		public HeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headers; }
	}

	public final HeadersContext headers() throws RecognitionException {
		HeadersContext _localctx = new HeadersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_headers);
		int _la;
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START:
				enterOuterAlt(_localctx, 1);
				{
				 ((HeadersContext)_localctx).list =  new ArrayList<String>(); 
				}
				break;
			case HEADERS:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(HEADERS);
				 ArrayList<String> listRes = new ArrayList<>(); 
				setState(40);
				match(OPEN_CLOSURE);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(41);
					match(IMPORT);
					setState(42);
					((HeadersContext)_localctx).importW = match(WORD);
					 listRes.add(((HeadersContext)_localctx).importW); 
					setState(44);
					match(SEMICOLON);
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(50);
				match(CLOSE_CLOSURE);
				 ((HeadersContext)_localctx).list =  listRes; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartRuleContext extends ParserRuleContext {
		public String name;
		public Token w2;
		public TerminalNode START() { return getToken(InputGrammarParserParser.START, 0); }
		public TerminalNode EQLUALLY() { return getToken(InputGrammarParserParser.EQLUALLY, 0); }
		public TerminalNode SEMICOLON() { return getToken(InputGrammarParserParser.SEMICOLON, 0); }
		public TerminalNode WORD() { return getToken(InputGrammarParserParser.WORD, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_startRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(START);
			setState(55);
			match(EQLUALLY);
			setState(56);
			((StartRuleContext)_localctx).w2 = match(WORD);
			 ((StartRuleContext)_localctx).name =  ((StartRuleContext)_localctx).w2; 
			setState(58);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesQContext extends ParserRuleContext {
		public ArrayList<Rule> list;
		public RuleQContext r;
		public TerminalNode RULES() { return getToken(InputGrammarParserParser.RULES, 0); }
		public TerminalNode OPEN_CLOSURE() { return getToken(InputGrammarParserParser.OPEN_CLOSURE, 0); }
		public TerminalNode CLOSE_CLOSURE() { return getToken(InputGrammarParserParser.CLOSE_CLOSURE, 0); }
		public List<RuleQContext> ruleQ() {
			return getRuleContexts(RuleQContext.class);
		}
		public RuleQContext ruleQ(int i) {
			return getRuleContext(RuleQContext.class,i);
		}
		public RulesQContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulesQ; }
	}

	public final RulesQContext rulesQ() throws RecognitionException {
		RulesQContext _localctx = new RulesQContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rulesQ);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case TOKENS:
			case IGNORE:
				enterOuterAlt(_localctx, 1);
				{
				 ((RulesQContext)_localctx).list =  new ArrayList<Rule>(); 
				}
				break;
			case RULES:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(RULES);
				 ArrayList<Rule> listRes = new ArrayList<>();
				setState(63);
				match(OPEN_CLOSURE);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WORD) {
					{
					{
					setState(64);
					((RulesQContext)_localctx).r = ruleQ();
					 listRes.add(((RulesQContext)_localctx).r.ruleq); 
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(CLOSE_CLOSURE);
				 ((RulesQContext)_localctx).list =  listRes; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleQContext extends ParserRuleContext {
		public Rule ruleq;
		public Token w1;
		public ParametersContext par;
		public ReturnValueContext ret;
		public ConditionContext c1;
		public ConditionContext c2;
		public TerminalNode OPEN_BRACKET() { return getToken(InputGrammarParserParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(InputGrammarParserParser.CLOSE_BRACKET, 0); }
		public TerminalNode RETURNS() { return getToken(InputGrammarParserParser.RETURNS, 0); }
		public TerminalNode COLON() { return getToken(InputGrammarParserParser.COLON, 0); }
		public TerminalNode SEMICOLON() { return getToken(InputGrammarParserParser.SEMICOLON, 0); }
		public TerminalNode WORD() { return getToken(InputGrammarParserParser.WORD, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ReturnValueContext returnValue() {
			return getRuleContext(ReturnValueContext.class,0);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(InputGrammarParserParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(InputGrammarParserParser.OR, i);
		}
		public RuleQContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleQ; }
	}

	public final RuleQContext ruleQ() throws RecognitionException {
		RuleQContext _localctx = new RuleQContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleQ);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((RuleQContext)_localctx).w1 = match(WORD);
			((RuleQContext)_localctx).ruleq =  new Rule(((RuleQContext)_localctx).w1);
			setState(78);
			match(OPEN_BRACKET);
			setState(79);
			((RuleQContext)_localctx).par = parameters();
			setState(80);
			match(CLOSE_BRACKET);
			setState(81);
			match(RETURNS);
			setState(82);
			((RuleQContext)_localctx).ret = returnValue();
			 _localctx.ruleq.parameters.add(((RuleQContext)_localctx).par.list); _localctx.ruleq.returnType = ((RuleQContext)_localctx).ret.returnType; 
			setState(84);
			match(COLON);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD || _la==CODE) {
				{
				setState(85);
				((RuleQContext)_localctx).c1 = condition();
				 _localctx.ruleq.conditions.add(((RuleQContext)_localctx).c1.cond); 
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OR) {
					{
					{
					setState(87);
					match(OR);
					setState(88);
					((RuleQContext)_localctx).c2 = condition();
					 _localctx.ruleq.conditions.add(((RuleQContext)_localctx).c2.cond); 
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(98);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public ArrayList<Parameter> list;
		public Token var1;
		public Token type1;
		public Token var2;
		public Token type2;
		public List<TerminalNode> COLON() { return getTokens(InputGrammarParserParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(InputGrammarParserParser.COLON, i);
		}
		public List<TerminalNode> WORD() { return getTokens(InputGrammarParserParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(InputGrammarParserParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(InputGrammarParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(InputGrammarParserParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameters);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLOSE_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				 ((ParametersContext)_localctx).list =  new ArrayList<Parameter>(); 
				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				((ParametersContext)_localctx).var1 = match(WORD);
				 ArrayList<Parameter> listRes = new ArrayList<>(); 
				setState(103);
				match(COLON);
				setState(104);
				((ParametersContext)_localctx).type1 = match(WORD);
				 listRes.add(new Parameter(((ParametersContext)_localctx).var1, ((ParametersContext)_localctx).type1)); 
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(106);
					match(COMMA);
					setState(107);
					((ParametersContext)_localctx).var2 = match(WORD);
					setState(108);
					match(COLON);
					setState(109);
					((ParametersContext)_localctx).type2 = match(WORD);
					 listRes.add(new Parameter(((ParametersContext)_localctx).var2, ((ParametersContext)_localctx).type2)); 
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((ParametersContext)_localctx).list =  listRes; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnValueContext extends ParserRuleContext {
		public ReturnField returnType;
		public Token var1;
		public Token type1;
		public TerminalNode COLON() { return getToken(InputGrammarParserParser.COLON, 0); }
		public List<TerminalNode> WORD() { return getTokens(InputGrammarParserParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(InputGrammarParserParser.WORD, i);
		}
		public ReturnValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnValue; }
	}

	public final ReturnValueContext returnValue() throws RecognitionException {
		ReturnValueContext _localctx = new ReturnValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((ReturnValueContext)_localctx).var1 = match(WORD);
			setState(120);
			match(COLON);
			setState(121);
			((ReturnValueContext)_localctx).type1 = match(WORD);
			 ((ReturnValueContext)_localctx).returnType =  new ReturnField(((ReturnValueContext)_localctx).var1, ((ReturnValueContext)_localctx).type1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public Condition cond;
		public StepContext s;
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ArrayList<Step> listRes = new ArrayList<>(); 
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				((ConditionContext)_localctx).s = step();
				 listRest.add(((ConditionContext)_localctx).s.stepq) 
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD || _la==CODE );
			 ((ConditionContext)_localctx).cond =  new Condition().add(listRes); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepContext extends ParserRuleContext {
		public Step stepq;
		public Token c;
		public Token w1;
		public Token w2;
		public Token w3;
		public Token w4;
		public TerminalNode CODE() { return getToken(InputGrammarParserParser.CODE, 0); }
		public List<TerminalNode> WORD() { return getTokens(InputGrammarParserParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(InputGrammarParserParser.WORD, i);
		}
		public TerminalNode EQLUALLY() { return getToken(InputGrammarParserParser.EQLUALLY, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(InputGrammarParserParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(InputGrammarParserParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(InputGrammarParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(InputGrammarParserParser.COMMA, i);
		}
		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step; }
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_step);
		int _la;
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				((StepContext)_localctx).c = match(CODE);
				 ((StepContext)_localctx).stepq =  new CodeStep(((StepContext)_localctx).c); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				((StepContext)_localctx).w1 = match(WORD);
				 ((StepContext)_localctx).stepq =  new RunTermStep("", ((StepContext)_localctx).w1); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				((StepContext)_localctx).w1 = match(WORD);
				setState(139);
				match(EQLUALLY);
				setState(140);
				((StepContext)_localctx).w2 = match(WORD);
				 ((StepContext)_localctx).stepq =  new RunTermStep(((StepContext)_localctx).w1, ((StepContext)_localctx).w2); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(142);
				((StepContext)_localctx).w1 = match(WORD);
				setState(143);
				match(EQLUALLY);
				setState(144);
				((StepContext)_localctx).w2 = match(WORD);
				 String tmp_str = ((StepContext)_localctx).w2 + "("; 
				setState(146);
				match(OPEN_BRACKET);
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WORD) {
					{
					setState(147);
					((StepContext)_localctx).w3 = match(WORD);
					 tmp_str = tmp_str + ((StepContext)_localctx).w3; 
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(149);
						match(COMMA);
						setState(150);
						((StepContext)_localctx).w4 = match(WORD);
						 tmp_str = tmp_str + ", " + ((StepContext)_localctx).w4; 
						}
						}
						setState(156);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(159);
				match(CLOSE_BRACKET);
				 tmp_str = tmp_str + ")"; ((StepContext)_localctx).stepq =  new RunTermStep(((StepContext)_localctx).w1, tmp_str); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				((StepContext)_localctx).w2 = match(WORD);
				 String tmp_str = ((StepContext)_localctx).w2 + "("; 
				setState(163);
				match(OPEN_BRACKET);
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WORD) {
					{
					setState(164);
					((StepContext)_localctx).w3 = match(WORD);
					 tmp_str = tmp_str + ((StepContext)_localctx).w3; 
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(166);
						match(COMMA);
						setState(167);
						((StepContext)_localctx).w4 = match(WORD);
						 tmp_str = tmp_str + ", " + ((StepContext)_localctx).w4; 
						}
						}
						setState(173);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
